--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer-body{
     min-height: 300px;
-    background-color: rgb(48, 47, 47);
+    background-color: rgb(52,58,64);
     color: white;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -9,6 +9,11 @@
 .icon{
     font-size: 30px;
     margin-right: 20px;
+}
+.icon:hover{
+    font-size: 28px;
+    color: rgba(255, 255, 255, 0.829);
+    cursor: pointer;
 }
 .footer-description{
     font-weight: bold;
